Creacion de servicios de Reconocimiento Visual de IBM e inyeccion de dependencias

--- a/BeerClassWebApp/BeerClassWebApp.csproj
+++ b/BeerClassWebApp/BeerClassWebApp.csproj
@@ -15,4 +15,8 @@
     <Folder Include="wwwroot\uploads\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BeerClassifier.Services\BeerClassifier.Services.csproj" />
+  </ItemGroup>
+
 </Project>
