--- a/BeerClassWebApp/appsettings.json
+++ b/BeerClassWebApp/appsettings.json
@@ -6,5 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApiSettings": {
+    "ApiEndpoint": "https://gateway.watsonplatform.net/visual-recognition/api",
+    "ApiKey": "5S2-zoepnLrgIYttY5YaWcahm8yeZgLLwenH4eESZJlO",
+    "ApiModelID": "Cervezas_2141351471",
+    "ApiOwner": "me"
+
+  }
 }
