--- a/BeerClassWebApp/BeerClassifer.WebApp.csproj
+++ b/BeerClassWebApp/BeerClassifer.WebApp.csproj
@@ -16,7 +16,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.7" />
+    <PackageReference Include="Microsoft.Azure.Management.CosmosDB.Fluent" Version="1.34.0" />
+    <PackageReference Include="MvcContrib" Version="2.0.95" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BeerClassifier.Services\BeerClassifier.Services.csproj" />
+    <ProjectReference Include="..\MongoRepository\MongoRepository.csproj" />
   </ItemGroup>
 
 </Project>
