--- a/BeerClassifier.Services/BeerClassifier.Services.csproj
+++ b/BeerClassifier.Services/BeerClassifier.Services.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -7,6 +7,11 @@
   <ItemGroup>
     <PackageReference Include="IBM.Watson.VisualRecognition.v3" Version="4.5.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BeerClassfier.Entities\BeerClassfier.Entities.csproj" />
+    <ProjectReference Include="..\MongoRepository\MongoRepository.csproj" />
   </ItemGroup>
 
 </Project>
