Se apunta a un nuevo modelo mas optimizado

--- a/BeerClassWebApp/appsettings.json
+++ b/BeerClassWebApp/appsettings.json
@@ -10,7 +10,7 @@
   "ApiSettings": {
     "ApiEndpoint": "https://gateway.watsonplatform.net/visual-recognition/api",
     "ApiKey": "5S2-zoepnLrgIYttY5YaWcahm8yeZgLLwenH4eESZJlO",
-    "ApiModelID": "Cervezas_2141351471",
+    "ApiModelID": "BeerClassifier_778438825",
     "ApiOwner": "me"
 
   }
